test/Constraints/issue-47241.code
// RUN: %target-typecheck-verify-language

// https://github.com/apple/language/issues/47241

struct M<T> where T : Collection { // expected-note {{where 'T' = 'X.Y'}}
  static fn f(a: T, b: T) -> [E<T.Iterator.Element>] {
  }
}

enum E<T> {}

struct S {}

struct X {
  struct Y {
    immutable s: [S]
  }

  immutable y: [Y]
}

immutable x = X(y: [])
immutable a = M.f(a: x.y[0], b: x.y[1])
// expected-error@-1 {{generic struct 'M' requires that 'X.Y' conform to 'Collection'}}
